--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,19 @@
 pytorch
 torchvision
-numpy=1.19.2
-albumentations==0.4.3
+numpy
 diffusers
-opencv-python==4.1.2.30
+opencv-python
+albumentations==0.4.3
 pudb==2019.2
 invisible-watermark
 imageio==2.9.0
 imageio-ffmpeg==0.4.2
-pytorch-lightning==1.4.2
+pytorch-lightning
 omegaconf==2.1.1
 test-tube>=0.7.5
 streamlit>=0.73.1
 einops==0.3.0
-torch-fidelity==0.3.0
+torch-fidelity
 transformers==4.19.2
 torchmetrics==0.6.0
 kornia==0.6
