--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -12,6 +12,8 @@ RUN \
 		&& apt-get update && apt-get install -y \
 			vim \
 			git \
+            cmake \
+            build-essential \
 			virtualenv \
 			time \
 			sudo \
