--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -40,6 +40,7 @@ RUN \
 
 #Fix(?) Unexpected error from cudaGetDeviceCount(). Did you run some cuda functions before calling NumCudaDevices() that might have already set an error? Error 34: CUDA driver is a stub library
 #RUN rm -rf /usr/local/cuda/lib64/stubs
+#RUN sudo apt install -y nvidia-cuda-toolkit
 
 USER ${user_name} 
 WORKDIR /home/${user_name}/
